@startuml
'https://plantuml.com/class-diagram

package stream {
    class Space {
        id: string
    }
    class LiveStream {
        id: string
    }

    Space "1" --> "n" LiveStream
}


package "lobby" as X {
    class LobbyManager << (S,#FF7700) Singleton >>
    class lobby {
        id: string (LiveStreamId)
    }

    class session {
        id uuid
        user uuid
    }
    class hub {}

    class receiverHandler {}
    class senderHandler {}


}

LiveStream "1"->"0..1" lobby : "                "

    LobbyManager "1" --> "n" lobby
    lobby "1" ..> "n" session : "  join with user uuid"
    lobby - hub
    hub --> session
    session "1" --> "1" receiverHandler
    session "1" --> "0..1" senderHandler

receiverHandler --() receiveEndpoint : "         "
senderHandler --() sendEndpoint

@enduml
